# chygraph

./: .gitignore  README.md  pyproject.toml  supp.ipynb
examples/: graph_with_triangles.py  hypergraph.py  interacting_hypergraphs.py  multiplex_hypergraph.py
src/chygraph/: __init__.py  percolation.py
src/chygraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_percolation.py
